# nezumi

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: args.rs  config.rs  key.rs  main.rs  windows.rs
